Fixed issues with overflows and grids

--- a/public/index.css
+++ b/public/index.css
@@ -201,8 +201,8 @@ p {
     padding: 2% 4% 2% 4%;
 }
 
-span.pageArticle {
-    padding: 2% 4% 0 4%;
+.pageArticle.inline {
+    padding-bottom: 0;
 }
 
 .mindatMicroLink {
@@ -256,8 +256,7 @@ a.statusYellow {
 
 .pageSpecialtyGrid {
     display: flex;
-    padding: 4%;
-    padding-top: 0;
+    padding: 2% 4% 2% 4%;
     width: calc(100% - 8%);
     flex-direction: row;
     flex-wrap: wrap;
@@ -265,8 +264,8 @@ a.statusYellow {
 
 .specialtyGridItem {
     position: relative;
-    margin-top: 1em;
-    padding-top: 0.5em;
+    /* margin-bottom: 1em; */
+    padding-bottom: 1em;
     width: 50%;
 }
 
@@ -278,17 +277,27 @@ a.statusYellow {
 
 .specialtyGridContent {
     position: absolute;
-    top: 0.5em;
+    top: 0;
     right: 0.5em;
     width: calc(100% - 7.5em);
+    height: 6em;
 }
 
 .specialtyGridTitle {
     font-weight: bold;
+    height: 1.5em;
 }
 
 .specialtyGridDesc {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    line-clamp: 4;
+    -webkit-box-orient: vertical;
     font-size: 0.8em;
+    height: 5em;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .pageLinkGrid {
@@ -368,7 +377,7 @@ a.statusYellow {
     }
 
     .specialtyGridItem {
-        width: 100%;
+        width: 50%;
     }
 
     .linkGridItem {
@@ -409,6 +418,17 @@ a.statusYellow {
     
     .pageArticle {
         padding: 0.5em;
+        padding-top: 1em;
+        padding-bottom: 1em;
+    }
+
+    .pageSpecialtyGrid {
+        padding: 4% 0 4% 0;
+        margin: 0.5em;
+    }
+
+    .specialtyGridItem {
+        width: 100%;
     }
 
     p {
